sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:23: error: not found: value o
    if (x>o)
          ^